--- a/site_files/app/themes/sass/partials/_fancynancy/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_fancynancy/frontend-structure.sass
@@ -241,11 +241,10 @@ div#announcements
   overflow: hidden
 
   a
-    display: inline-block
+    display: block
     
   a:hover
     border: none
-    display: inline-block
 
 
 div.announcement-tail
@@ -260,6 +259,9 @@ div#announcement-numbers
   background-clip: padding-box
   @include round-corners(0, 0, 12px, 0)
   @include enable-ie-css3
+
+  a
+    display: inline-block
 
 
 div#announcements img
