--- a/site_files/app/themes/sass/partials/_redsign/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_redsign/frontend-structure.sass
@@ -232,11 +232,10 @@ div#announcements
   width: 730px
 
   a
-    display: inline-block
+    display: block
 
   a:hover
     border: none
-    display: inline-block
 
 
 div.announcement-tail
@@ -249,6 +248,9 @@ div#announcement-numbers
   padding: 12px
   position: absolute
   right: 0
+
+  a
+    display: inline-block
 
 
 div.announcement img
