--- a/site_files/app/themes/sass/partials/_tidypresent/frontend-structure.sass
+++ b/site_files/app/themes/sass/partials/_tidypresent/frontend-structure.sass
@@ -215,11 +215,10 @@ div#announcements
   width: 940px
 
   a
-    display: inline-block
+    display: block
 
   a:hover
     border: none
-    display: inline-block
 
 
 div.announcement-tail
@@ -234,6 +233,9 @@ div#announcement-numbers
   right: 0
   @include round-corners(0, 0, 0, 12px)
   @include enable-ie-css3
+
+  a
+    display: inline-block
 
 
 div.announcement img
